--- a/frontend/src/styles/scss/_variables.scss
+++ b/frontend/src/styles/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Colours
-$colour-primary: #5532ed;
-$colour-background: #fbfafb;
+$colour-primary: rgba(85, 50, 237, 1);
+$colour-background: rgba(251, 250, 251, 1);
 
 // Fonts
 $font-primary: "Poppins", sans-serif;
